[gd_scene load_steps=16 format=2]

[ext_resource path="res://Shell/Shell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shell/player-shell.gd" type="Script" id=2]
[ext_resource path="res://Commands/ssh-command.gd" type="Script" id=3]
[ext_resource path="res://Commands/help-command.gd" type="Script" id=4]
[ext_resource path="res://Commands/probe-command.gd" type="Script" id=5]
[ext_resource path="res://Commands/exit-command.gd" type="Script" id=6]
[ext_resource path="res://Commands/cd-command.gd" type="Script" id=7]
[ext_resource path="res://Commands/ls-command.gd" type="Script" id=8]
[ext_resource path="res://Commands/animation-command.gd" type="Script" id=9]
[ext_resource path="res://FileSystem/PlayerFileSystem.tscn" type="PackedScene" id=10]
[ext_resource path="res://Commands/cat-command.gd" type="Script" id=11]
[ext_resource path="res://Shared/Shader/crt-material.tres" type="Material" id=12]
[ext_resource path="res://Commands/run-command.gd" type="Script" id=13]
[ext_resource path="res://Commands/motd-command.gd" type="Script" id=14]
[ext_resource path="res://Commands/clear-command.gd" type="Script" id=15]

[node name="PlayerShell" instance=ExtResource( 1 )]
script = ExtResource( 2 )
accent_color = Color( 0.0862745, 0.776471, 0.0470588, 1 )
error_color = Color( 0.772549, 0.0588235, 0.121569, 1 )
warning_color = Color( 0.756863, 0.611765, 0, 1 )

[node name="cat" type="Node" parent="Commands" index="0"]
script = ExtResource( 11 )

[node name="cd" type="Node" parent="Commands" index="1"]
script = ExtResource( 7 )

[node name="exit" type="Node" parent="Commands" index="2"]
script = ExtResource( 6 )

[node name="help" type="Node" parent="Commands" index="3"]
script = ExtResource( 4 )

[node name="ls" type="Node" parent="Commands" index="4"]
script = ExtResource( 8 )

[node name="probe" type="Node" parent="Commands" index="5"]
script = ExtResource( 5 )

[node name="ssh" type="Node" parent="Commands" index="6"]
script = ExtResource( 3 )

[node name="proc" type="Node" parent="Commands" index="7"]
script = ExtResource( 9 )
command_description = "Displays running processes"
animation_name = "proc"
aliases = [ "proc" ]
interval = 0.8

[node name="run" type="Node" parent="Commands" index="8"]
script = ExtResource( 13 )

[node name="motd" type="Node" parent="Commands" index="9"]
script = ExtResource( 14 )

[node name="clear" type="Node" parent="Commands" index="10"]
script = ExtResource( 15 )

[node name="FileSystem" parent="." index="3" instance=ExtResource( 10 )]

[node name="TextEdit" type="TextEdit" parent="." index="4"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 0
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shader" type="ColorRect" parent="." index="5"]
material = ExtResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="cursor_changed" from="TextEdit" to="." method="_on_TextEdit_cursor_changed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
